# logic-circuit-simulator

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
scripts/: build.sh  prepare.sh
tests/: single_component_tests.cpp
